# learn-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: rust.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
docs/: README.md
docs/fundamentals/: common-programming-concepts.md  guessing-game.md  ownership.md  structs.md  syntax-basics.md  syntax_basics.md
docs/tutorials/: README.md  cargo_and_rustup.md  comments_and_docs.md  getting-started.md  naming_conventions.md  running_a_project.md
dsa/array/: Cargo.toml
fundamentals/common_programming_concepts/: Cargo.toml
fundamentals/common_programming_concepts/docs/: README.md  comments.md  control-flow.md  data-types.md  functions.md  variables-mutability.md
fundamentals/common_programming_concepts/src/: comments.rs  control_flow.rs  data_types.rs  functions.rs  main.rs  variables_mutability.rs
fundamentals/enums_and_pattern_matching/: Cargo.toml
fundamentals/enums_and_pattern_matching/docs/: README.md  concise-control-flow.md  defining-an-enum.md  match-control-flow.md
fundamentals/enums_and_pattern_matching/src/: enums.rs  if_let.rs  main.rs  match_control_flow.rs
fundamentals/ownership/: Cargo.toml
fundamentals/ownership/docs/: README.md  references-and-borrowing.md  (+2 more)
fundamentals/structs/: Cargo.toml
fundamentals/syntax_basics/: Cargo.toml
projects/guessing_game/: Cargo.toml
projects/hello-world/: Cargo.toml
scripts/: new-crate.sh
(+21 files in other folders)
